--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -174,7 +174,11 @@ if(gridListView)
 
 if(landing)
     // landing js
-    script(src="../../assets/js/landing.js") 
+    script(src="../../assets/js/landing.js")
+
+if(passwordHideShow)
+    // password hide-show js
+    script(src="../../assets/js/password-hide-show.js") 
 
 // Custom script   
 script(src='../../assets/js/script.js')   
