--- a/assets/pug/pages/template/login.pug
+++ b/assets/pug/pages/template/login.pug
@@ -8,6 +8,9 @@
 //- fontawesome
 -var fontAwesome=true;
 
+//- passwordHideShow
+-var passwordHideShow=true;
+
 doctype html
 html(lang='en')
     include ../../layout/header-files
