--- a/assets/pug/pages/template/progress.pug
+++ b/assets/pug/pages/template/progress.pug
@@ -281,8 +281,8 @@ html(lang='en')
                             div(class="bg-danger" style="width:50%")
                         div.progress-bar.progress-lg.multi-bar(class="dark:bg-border-dark")
                           div.flex
-                            div(class="bg-light" style="width:45%")
-                            div(class="bg-warning" style="width:22%")
+                            div(class="bg-warning" style="width:45%")
+                            div(class="bg-light" style="width:22%")
                         div.progress-bar.progress-lg.multi-bar(class="dark:bg-border-dark")
                           div.flex
                             div(class="bg-success" style="width:45%")
@@ -310,8 +310,8 @@ html(lang='en')
                           |    &lt;/div&gt;
                           |    &lt;div class="progress-bar progress-lg multi-bar dark:bg-border-dark"&gt;
                           |        &lt;div class="flex"&gt;
-                          |           &lt;div class="bg-light rounded-l-2xl" style="width:45%"&gt;&lt;/div&gt;
-                          |           &lt;div class="bg-warning" style="width:22%"&gt;&lt;/div&gt;
+                          |           &lt;div class=" bg-warning rounded-l-2xl" style="width:45%"&gt;&lt;/div&gt;
+                          |           &lt;div class="bg-light" style="width:22%"&gt;&lt;/div&gt;
                           |        &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="progress-bar progress-lg multi-bar dark:bg-border-dark"&gt;
