--- a/html/template/login.html
+++ b/html/template/login.html
@@ -141,6 +141,8 @@
   <script src="../../assets/js/custom-select.js"></script>
   <!-- fontAwesome js-->
   <script src="../../assets/js/fontawesome/all.min.js"></script>
+  <!-- password hide-show js-->
+  <script src="../../assets/js/password-hide-show.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
