--- a/html/template/progress.html
+++ b/html/template/progress.html
@@ -423,10 +423,6 @@
                               <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Shield-Done"> </use>
                               </svg>Help</a></li>
-                          <li><a class="flex items-center gap-2 text-title" href="javascript:void(0)">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
-                                <use href="../../assets/svg/sprite.svg#Login"> </use>
-                              </svg>Logout</a></li>
                         </ul>
                       </div>
                     </div>
@@ -1317,8 +1313,8 @@
                         </div>
                         <div class="progress-bar progress-lg multi-bar dark:bg-border-dark">
                           <div class="flex">
-                            <div class="bg-light" style="width:45%"></div>
-                            <div class="bg-warning" style="width:22%"></div>
+                            <div class="bg-warning" style="width:45%"></div>
+                            <div class="bg-light" style="width:22%"></div>
                           </div>
                         </div>
                         <div class="progress-bar progress-lg multi-bar dark:bg-border-dark">
@@ -1349,8 +1345,8 @@
    &lt;/div&gt;
    &lt;div class="progress-bar progress-lg multi-bar dark:bg-border-dark"&gt;
        &lt;div class="flex"&gt;
-          &lt;div class="bg-light rounded-l-2xl" style="width:45%"&gt;&lt;/div&gt;
-          &lt;div class="bg-warning" style="width:22%"&gt;&lt;/div&gt;
+          &lt;div class=" bg-warning rounded-l-2xl" style="width:45%"&gt;&lt;/div&gt;
+          &lt;div class="bg-light" style="width:22%"&gt;&lt;/div&gt;
        &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="progress-bar progress-lg multi-bar dark:bg-border-dark"&gt;
