--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -423,10 +423,6 @@
                               <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Shield-Done"> </use>
                               </svg>Help</a></li>
-                          <li><a class="flex items-center gap-2 text-title" href="javascript:void(0)">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
-                                <use href="../../assets/svg/sprite.svg#Login"> </use>
-                              </svg>Logout</a></li>
                         </ul>
                       </div>
                     </div>
@@ -1317,7 +1313,7 @@
       &lt;label class="button-label btn-success" for="modal-13"&gt;Bottom Center Modal&lt;/label&gt;
       &lt;label class="button-label btn-success" for="modal-13"&gt;Bottom Right Modal&lt;/label&gt;
    &lt;/div&gt;                        
-
+ 
 &lt;!-- Put this part before &lt;/body&gt; tag for bottom left position modal --&gt;
   &lt;div&gt;                        
      &lt;input class="peer" name="modal-12" type="checkbox" id="modal-12"&gt;
@@ -1383,7 +1379,7 @@
                   </div>
                 </div>
                 <div class="card-body">                                  
-                  <div class="tabs-content">
+                  <div class="tabs-content"> 
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <label class="button-label btn-success" for="modal-6">Centered Modal</label>
@@ -1624,7 +1620,6 @@
   &lt;div class="flex flex-col flex-wrap gap-2"&gt;
      &lt;label class="button-label btn-success" for="modal-9"&gt;Modal&lt;/label&gt;
   &lt;/div&gt;
-
 &lt;!-- Put this part before &lt;/body&gt; tag --&gt;
   &lt;div&gt;
       &lt;input class="peer" name="modal-9" type="checkbox" id="modal-9"&gt;
@@ -1926,12 +1921,12 @@
         <label class="modal-overlay peer-checked:block" for="modal-9"></label>
         <div class="modal w-[18.75rem] peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-header">
-            <h3>Tooltip and popover modal</h3>
-            <label for="modal-9"><i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
+            <h3>Tooltip and Popover modal</h3>
+            <label for="modal-9"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
           </div>
-          <div class="modal-body">
-            <p class="leading-">Here, you can see that inside the
-              <label class="button-label btn-secondary text-sm py-1 px-2" data-tw-tooltip="Tooltip">popover</label>  modal, <a class="font-semibold text-secondary" href="javascript:void(0)" data-tw-tooltip="link">This link  </a> and that link have tooltips on hover.
+          <div class="modal-body">   
+            <p class="leading-[1.9]">Here, you can see that inside the
+              <label class="button-label btn-secondary text-sm py-1 px-2" data-tw-tooltip="Tooltip">popover</label>  modal,  <a class="font-semibold text-secondary" href="javascript:void(0)" data-tw-tooltip="link">This link  </a> and that link have tooltips on hover.
             </p>
           </div>
         </div>
